2012-05-15  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/: Fix bugs associated with new library checks for sdr
	open for reading.
	
2012-05-15  Albert Chu <chu11@llnl.gov>

	Merge branch toolcleanup

	* common/toolsdr/tool-sdr-cache-common.h,
	common/toolsdr/tool-sdr-cache-common.c: Take struct sdr_cmd_args
	pointer as argument instead of each desired parameter.

	* common/toolcommon/tool-common.h,
	common/toolcommon/tool-common.c (ipmi_open): Take pstdout_state_t
	parameter and output errors instead of returning error string in
	buffer.

	* common/toolhostrange/tool-hostrange-common.h,
	common/toolhostrange/tool-hostrange-common.c (pstdout_setup): Take
	struct hostrange_cmd_args pointer as argument instead of each
	desired parameter.

	* common/toolhostrange/tool-util-common.h,
	common/toolhostrange/tool-util-common.c: New files, functions
	split off from common/toolcommon/tool-common.h and
	common/toolcommon/tool-common.c.

	* common/daemonutil/, common/tooloem/, common/toolsdr/,
	common/toolevent/, common/toolsensor/, common/toolhostrange/:
	Merge into common/toolcommon/ library.

	* Update tools appropriately for changes.
	
2012-05-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Rename a large number of internal functions with
	'ipmi' prefixes so they are not exported by libfreeipmi.
	
2012-05-15  Albert Chu <chu11@llnl.gov>

	Merge movetolib branch
	
       * libfreeipmi/include/freeipmi/sel/ipmi-sel.h,
       libfreeipmi/sel/ipmi-sel-string.c (_output_event_data1_event_data2_event_data3),
       libfreeipmi/sel/ipmi-sel-string.c (sel_parse_format_record_string):
       Support new '%E' for sel string outputs.
	
       * common/toolevent/tool-event-common.c (event_output_event): Use
       new '%E' appropriately.

2012-05-15  Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/ipmimonitoring.map/: Explicitly list functions
	to avoid errant functions being made global.
	
2012-05-14  Albert Chu <chu11@llnl.gov>

	Cleanup sel-parse sub-library
