@@ -1,3 +1,10 @@
+2012-05-16  Albert Chu <chu11@llnl.gov>
+
+	* common/toolcommon/tool-sdr-cache-common.h,
+	common/toolcommon/tool-sdr-cache-common.c (sdr_cache_flush_cache):
+	Do not require ipmi_sdr_ctx_t parameter, create it inside
+	function.
+	
 2012-05-15  Albert Chu <chu11@llnl.gov>
 
 	* ipmi-pet/: Fix bugs associated with new library checks for sdr
